# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-rest-api-actix-web-4"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2021"
license = "Apache-2.0"
description = """\
    Splinter REST API implementation written using Actix Web v4.
"""

[dependencies]
actix-utils = "3.0.0"
actix-web = "4.0.1"
serde = {version = "1.0.136", features = ["derive"]}
futures = "0.3.21"
log = "0.4.14"
openssl = "0.10.38"
splinter = { path = "../../libsplinter", features = ["store","store-factory","rest-api"] }
splinter-rest-api-common = {path = "../common"}

[features]
default = []

stable = [
    # The stable feature extends default:
    "default"
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "admin",
    "authorization",
    "biome-credentials",
    "biome-profile",
    "oauth",
    "https-bind",
    "store-factory"
]

admin = ["splinter-rest-api-common/admin"]
authorization = ["splinter/authorization"]
biome-credentials = ["splinter/biome-credentials"]
biome-profile = ["splinter/biome-profile"]
https-bind = ["actix-web/openssl","splinter/https-bind"]
oauth = ["splinter/oauth"]
store-factory = ["splinter/store-factory"]
